--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -8,3 +8,13 @@
     width: 34rem;
     background-color: #14FFEC;
 }
+
+.logos {
+    bottom: 6rem;
+    right: 6rem;
+}
+
+.our--main--skills {
+    right: 6rem;
+    bottom: 10.8rem;
+}
